Fixed alignment issues with imagebox div

--- a/inside3/assets/css/main.css
+++ b/inside3/assets/css/main.css
@@ -2222,3 +2222,14 @@
 			max-width: calc(100% - 4em);
 			margin: 18% auto;
 		}
+
+		#mastermindcontent{
+			background-color: rgba(255,255,255,0.0);
+
+		}
+
+		.boxes{
+			margin-bottom: -99999px;
+    padding-bottom: 99999px;
+    overflow:hidden;
+		}
